<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender_dark"
    tools:context=".ui.auth.RegisterActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/please_register"
                android:textAllCaps="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="name"
                android:background="@drawable/lavender_box"
                android:hint="@string/input_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:textColorHint="#757575"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_register" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="20dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/lavender_box"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:textColorHint="#757575"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <com.darosa.app.ui.customview.PasswordView
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:background="@drawable/lavender_box"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:textColorHint="#757575"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/select_gender"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="-32dp"
                android:background="@drawable/lavender_box"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_gender">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/male"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/female"
                    android:textSize="14sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="20dp"
                android:autofillHints="phone"
                android:background="@drawable/lavender_box"
                android:hint="@string/input_phone_number"
                android:inputType="phone"
                android:paddingHorizontal="20dp"
                android:textColorHint="#757575"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_gender" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="20dp"
                android:autofillHints="postalAddress"
                android:background="@drawable/lavender_box"
                android:hint="@string/input_address"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:textColorHint="#757575"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_phone_number" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="@color/lavender_dark"
                android:fontFamily="@font/poppins_semi_bold"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="12dp"
                app:layout_constraintTop_toBottomOf="@id/et_address" />

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"
                android:text="@string/have_account"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_register" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textColor="?android:textColorPrimary"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_user"
                app:layout_constraintTop_toTopOf="@id/tv_user" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <include
        android:id="@+id/progress_bar_dialog"
        layout="@layout/custom_progress_bar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
