<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.score.AddNilaiActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/input_name"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spin_nama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/lavender_box"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/yanbua_jilid_pemula"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_jilid0"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints="phone"
            android:background="@drawable/lavender_box"
            android:drawablePadding="16dp"
            android:drawableTint="@color/lavender_dark"
            android:hint="@string/input_score"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:targetApi="m" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/yanbua_jilid_1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_jilid1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints="phone"
            android:background="@drawable/lavender_box"
            android:drawablePadding="16dp"
            android:drawableTint="@color/lavender_dark"
            android:hint="@string/input_score"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:targetApi="m" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/yanbua_jilid_2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_jilid2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints="phone"
            android:background="@drawable/lavender_box"
            android:drawablePadding="16dp"
            android:drawableTint="@color/lavender_dark"
            android:hint="@string/input_score"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:targetApi="m" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/yanbua_jilid_3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_jilid3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints="phone"
            android:background="@drawable/lavender_box"
            android:drawablePadding="16dp"
            android:drawableTint="@color/lavender_dark"
            android:hint="@string/input_score"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:targetApi="m" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/lavender_dark"
            android:fontFamily="@font/poppins_semi_bold"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="12dp" />

    </LinearLayout>

    <include
        android:id="@+id/progress_bar_dialog"
        layout="@layout/custom_progress_bar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>